--- a/package.json
+++ b/package.json
@@ -7,13 +7,11 @@
     "url": "git@github.com:jpederson/Squirrel.js.git"
   },
   "devDependencies": {
-    "grunt": "latest",
-    "grunt-contrib-cssmin": "*",
-    "grunt-contrib-jshint": "*",
-    "grunt-contrib-sass": "*",
-    "grunt-contrib-uglify": "*",
-    "grunt-contrib-watch": "*",
-    "grunt-jsbeautifier": "^0.2.10",
-    "matchdep": "*"
+    "del": "~1.2.1",
+    "gulp": "~3.9.0",
+    "gulp-jshint": "~1.11.2",
+    "gulp-rename": "~1.2.2",
+    "gulp-sass": "^2.0.4",
+    "gulp-uglify": "~1.2.0"
   }
 }
