--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gulp-jsbeautifier": "^1.0.1",
     "gulp-jshint": "~1.11.2",
     "gulp-rename": "~1.2.2",
+    "gulp-replace": "^0.5.4",
     "gulp-sass": "^2.0.4",
     "gulp-uglify": "~1.2.0"
   }
