--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gulp-rename": "~1.2.2",
     "gulp-replace": "^0.5.4",
     "gulp-sass": "^2.0.4",
-    "gulp-uglify": "~1.2.0"
+    "gulp-uglify": "~1.2.0",
+    "jshint-stylish": "^2.0.1"
   }
 }
