--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "del": "~2.0.2",
     "gulp": "~3.9.0",
     "gulp-jsbeautifier": "^1.0.1",
-    "gulp-jshint": "~1.11.2",
+    "gulp-jshint": "^1.12.0",
     "gulp-rename": "~1.2.2",
     "gulp-replace": "^0.5.4",
     "gulp-sass": "^2.0.4",
