--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   },
   "devDependencies": {
     "del": "~2.1.0",
+    "eslint-config-airbnb": "^3.0.2",
     "gulp": "~3.9.0",
+    "gulp-eslint": "^1.1.1",
+    "gulp-if": "^2.0.0",
     "gulp-jsbeautifier": "^1.0.1",
     "gulp-jshint": "^2.0.0",
     "gulp-rename": "~1.2.2",
