--- a/.eslintrc
+++ b/.eslintrc
@@ -2,6 +2,7 @@
   "extends": "airbnb/legacy",
   "rules": {
     // Override Airbnb's style guide defaults for ES5
+    "camelcase": [2, {"properties": "always"}],
     "indent": [2, 4, {"SwitchCase": 1}],
     "max-len": [2, 255, 4],
     "no-param-reassign": 0,
