--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "url": "git@github.com:jpederson/Squirrel.js.git"
   },
   "devDependencies": {
-    "del": "~2.1.0",
+    "del": "^2.2.0",
     "eslint-config-airbnb": "^3.0.2",
     "gulp": "~3.9.0",
     "gulp-eslint": "^1.1.1",
@@ -18,6 +18,7 @@
     "gulp-replace": "^0.5.4",
     "gulp-sass": "^2.1.0",
     "gulp-uglify": "~1.5.1",
+    "jshint": "^2.8.0",
     "jshint-stylish": "^2.1.0"
   }
 }
