--- a/package.json
+++ b/package.json
@@ -8,17 +8,14 @@
   },
   "devDependencies": {
     "del": "^2.2.0",
-    "eslint-config-airbnb": "^3.1.0",
+    "eslint-config-airbnb": "^4.0.0",
     "gulp": "~3.9.0",
     "gulp-eslint": "^1.1.1",
     "gulp-if": "^2.0.0",
     "gulp-jsbeautifier": "^1.0.1",
-    "gulp-jshint": "^2.0.0",
     "gulp-rename": "~1.2.2",
     "gulp-replace": "^0.5.4",
     "gulp-sass": "^2.1.0",
-    "gulp-uglify": "~1.5.1",
-    "jshint": "^2.8.0",
-    "jshint-stylish": "^2.1.0"
+    "gulp-uglify": "~1.5.1"
   }
 }
